syntax = "proto3";

package wordle_data;

import "uuid.proto";

message RequestNewGameBody{
	UUID user_uuid = 1;
}